# AP-1

./: .clang-format  .gitignore  README.md
doc/: trading-system.tex
trading-system/: CMakeLists.txt
trading-system/include/: calculator.h  interface.h  shoppingcart.h  simpledatabase.h  strhandle.h  ui.h  user.h  useradmin.h  usergengral.h
trading-system/src/: calculator.cc  interface.cc  main.cc  main.cpp  shoppingcart.cc  simpledatabase.cc  simpledatabase.cpp  strhandle.cc  ui.cpp  user.cc  useradmin.cc  usergeneral.cc
trading-system/utf8cxx/: README.md
